menu button js correction visibilité

--- a/assets/css/mid-res.css
+++ b/assets/css/mid-res.css
@@ -118,6 +118,7 @@
     }
 
     .header-ul{
+        visibility: hidden;
         position: absolute;
         flex-direction: column;
         top:3.1em;
@@ -138,5 +139,10 @@
         font-size: 1.6rem;
 
     }
+
+}
+
+@media screen and (max-width: 500px) {
+
 
 }
